# New_Qt_Project

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
src/cpp/: New_Qt_Project.cpp  main.cpp
src/include/: New_Qt_Project.h
src/resources/: New_Qt_Project.qrc
src/ui/: New_Qt_Project.ui
